# boris_app_docs

./: .readthedocs.yaml  Makefile  README.rst  conf.py  index.rst  justfile  mkdocs.yml  pyproject.toml
src/: index.md  index.rst
